[project]
name = "hackerargs"
version = "1.1.1"
authors = [
  { name = "Max Shen" },
]
description = "Easy config system, minimizing new lines of code"
readme = "README.md"
dependencies = [
  'PyYAML'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/maxwshen/hackerargs"
Issues = "https://github.com/maxwshen/hackerargs/issues"